--- a/_includes/4-trails-overview.html
+++ b/_includes/4-trails-overview.html
@@ -1,26 +1,9 @@
-<section class="animated">
-  <div id="content" class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Explore the Trails</h2>
-      </div>
-      <div class="col-lg-3 text-center"></div>
-      <div class="col-lg-6 text-center">
-        <input id="search-input" type="text" class="form-control" placeholder="Search by Trail Name or City">
-        <ul id="results-container" class=""></ul>
-      </div>
-    </div>
-    <div class="col-lg-3 text-center"></div>
-    <div class="col-lg-12 text-center">
-      <hr class="primary">
-      <br />
-    </div>
-  </div>
+<section id="content" class="animated">
   <div class="container">
     <div class="row">
       <div class="col-lg-4 col-md-4 text-center">
         <div class="service-box">
-          <img src="/assets/img/homepage-images/medium/bikepath.jpg" class="img-responsive" alt="Responsive image">
+          <a href="bikeways"><img src="/assets/img/homepage-images/medium/bikepath.jpg" class="img-responsive" alt="Responsive image"></a>
           <h3>Bikeways</h3>
           <p class="text-muted">Southern Ohio has several paved and limestone bike paths.</p>
           <a class="btn btn-outline btn-xl btn-inverse" href="bikeways/">View the Bikeways</a>
@@ -28,7 +11,7 @@
       </div>
       <div class="col-lg-4 col-md-4 text-center">
         <div class="service-box">
-          <img src="/assets/img/homepage-images/medium/hiking.jpg" class="img-responsive" alt="Responsive image">
+          <a href="hiking"><img src="/assets/img/homepage-images/medium/hiking.jpg" class="img-responsive" alt="Responsive image"></a>
           <h3>Hiking & Backpacking Trails</h3>
           <p class="text-muted">With over one hundred miles of hiking and backpacking trails, including the Buckeye Trail and the Shawnee Backpacking Trail, Southern Ohio has your fix when it comes to outdoor adventure.</p>
           <a class="btn btn-outline btn-xl btn-inverse" href="/hiking/">View the Trails</a>
@@ -40,10 +23,30 @@
           <!--i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i-->
           <h3>Mountain Bike Trails</h3>
           <p class="text-muted">Mountain Biking is trending in Southern Ohio, and there are many great rides to choose from.</p>
-          <a class="btn btn-outline btn-xl btn-inverse" href="mountain-biking/">View the Trails</a>
-
+          <a class="btn btn-outline btn-xl btn-inverse" href="#">Coming Soon</a>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <hr class="primary">
+        <br />
+      </div>
+      <div id="search" class="col-lg-12 text-center">
+        <h2 class="section-heading">Search the Trails</h2>
+      </div>
+      <div class="col-lg-3 text-center"></div>
+      <div class="col-lg-6 text-center">
+        <input id="search-input" type="text" class="form-control" placeholder="Search by Trail Name or City">
+        <ul id="results-container" class=""></ul>
+      </div>
+    </div>
+    <div class="col-lg-3 text-center"></div>
+    <div class="col-lg-12 text-center">
+      <hr class="primary">
+      <br />
     </div>
   </div>
 </section>
