--- a/_layouts/trails.html
+++ b/_layouts/trails.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-css: "#map{height:530px;width:100%;border:thin solid #d3d3d3;margin-top:20px}"
+css: "#map{height:640px;width:100%;border:thin solid #d3d3d3;}"
 map: true
 ---
 {%include 4-trails-detailed.html%}
