--- a/_includes/1-head.html
+++ b/_includes/1-head.html
@@ -39,12 +39,15 @@
       })();
     </script>
     {% endif %}
+    <link href="/assets/css/main.css" rel="stylesheet" />
     <style>
     {% if page.homepage == true %}{% else %}
     @media (min-width: 768px) {header{min-height: 33%;} header .header-content {height: 33vh;}}
     {% endif %}
     </style>
     <style>
+    {% if page.homepage == "true" % }{% else %}
+    {% endif %}
     {% if page.css %}{{page.css}}{% endif %}
     </style>
 </head>
