--- a/_includes/4.5-trails.sidebar.html
+++ b/_includes/4.5-trails.sidebar.html
@@ -1,20 +1,88 @@
 
-      <div id="sidebar" class="col-xs-6 col-sm-3 col-md-3 sidebar-offcanvas" style="border-left:solid thin lightgray;background:white;">
+      <div id="sidebar" class="col-xs-6 col-sm-2 col-md-2 sidebar-offcanvas" style="border-left:solid thin lightgray;background:white;">
         <ul style="list-style:none;">
           <h4 class="text-muted">{% if page.type == "bikeway" %}
             Bikeways
             {% elsif page.type == "mountain" %}
             Mountain Bike Trails
             {% elsif page.type == "hiking" %}
-            Hiking & Backpacking Trails
+            Hiking Trails
             {% endif %}
           </h4>
           {% for trail in sorted_trails %}
           {% if trail.maptype == page.type and trail.Status == "Existing" %}
           {% if trail.subtype == "Extension" %}
-          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/">{{trail.Name}}</a></li>
+          {% elsif trail.subtype == "Hiking Trail" %}
+          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}}</a></li>
           {% endif %}
           {%endif%}
           {%endfor%}
-        </ul>
+        {% if page.type == "bikeway" %}
+          <h4 class="text-muted">
+            Hiking Trails
+          </h4>
+          {% for trail in sorted_trails %}
+          {% if trail.maptype == 'hiking' and trail.Status == "Existing" %}
+          {% if trail.subtype == "Extension" %}
+          {% elsif trail.subtype == "Hiking Trail" %}
+          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}}</a></li>
+          {% endif %}
+          {%endif%}
+          {%endfor%}
+          <h4 class="text-muted">Mountain Bike Trails
+          </h4>
+          {% for trail in sorted_trails %}
+          {% if trail.maptype == 'mountain' and trail.Status == "Existing" %}
+          {% if trail.subtype == "Extension" %}
+          {% elsif trail.subtype == "Hiking Trail" %}
+          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}}</a></li>
+          {% endif %}
+          {%endif%}
+          {%endfor%}
+          {% elsif page.type == "hiking" %}
+          <h4 class="text-muted">
+            Bikeways
+          </h4>
+          {% for trail in sorted_trails %}
+          {% if trail.maptype == 'bikeway' and trail.Status == "Existing" %}
+          {% if trail.subtype == "Extension" %}
+          {% elsif trail.subtype == "Hiking Trail" %}
+          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}}</a></li>
+          {% endif %}
+          {%endif%}
+          {%endfor%}
+          <h4 class="text-muted">Mountain Bike Trails
+          </h4>
+          {% for trail in sorted_trails %}
+          {% if trail.maptype == 'mountain' and trail.Status == "Existing" %}
+          {% if trail.subtype == "Extension" %}
+          {% elsif trail.subtype == "Hiking Trail" %}
+          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}}</a></li>
+          {% endif %}
+          {%endif%}
+          {%endfor%}
+        {% elsif page.type == "mountain" %}
+          <h4 class="text-muted">
+            Bikeways
+          </h4>
+          {% for trail in sorted_trails %}
+          {% if trail.maptype == 'bikeway' and trail.Status == "Existing" %}
+          {% if trail.subtype == "Extension" %}
+          {% elsif trail.subtype == "Hiking Trail" %}
+          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}}</a></li>
+          {% endif %}
+          {%endif%}
+          {%endfor%}
+          <h4 class="text-muted">Hiking  Trails
+          </h4>
+          {% for trail in sorted_trails %}
+          {% if trail.maptype == 'hiking' and trail.Status == "Existing" %}
+          {% if trail.subtype == "Extension" %}
+          {% elsif trail.subtype == "Hiking Trail" %}
+          {% else %}<li><a href="/trails/{{trail.Name | slugify}}/#content">{{trail.Name}}</a></li>
+          {% endif %}
+          {%endif%}
+          {%endfor%}
+        {% endif %}
+      </ul>
       </div>
