--- a/_includes/5-gallery.html
+++ b/_includes/5-gallery.html
@@ -13,24 +13,27 @@
 <section class="no-padding" id="portfolio">
   <div class="container-fluid">
     <div class="row no-gutter">
-      {%for img in site.data.trail-images | limit: 6%}
+      {%for trail in site.data.ovrdc_trails | limit: 6%}
+
       <div class="col-lg-4 col-sm-6">
         <div href="#" class="portfolio-box">
-          <img src="/trails/images/medium/{{img.img}}" class="img-responsive" alt="">
+          <img src="/trails/images/large/{{trail.img}}" class="img-responsive" alt="" style="min-width:33%;overflow:hidden;">
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
-                {{img.name}}
+                {{trail.Name}}
               </div>
               <div class="project-name">
-                {{img.caption}}
+                {{trail.Description}}
               </div>
               <br />
-              <a class="btn btn-outline btn-sm-img" href="/trails/{{img.name | slugify}}/">View the Trail</a>
+              <a class="btn btn-outline btn-sm-img" href="/trails/{{trail.Name | slugify}}/">View the Trail</a>
             </div>
           </div>
         </div>
-      </div>{%endfor%}
+      </div>
+
+{%endfor%}
     </div>
   </div>
 </section>
